<resources>
    <string name="app_name">DrinkWater</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade"> Sua Idade </string>
    <string name="text_button_calcular"> Calcular ingestão diária</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_doispontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_idade">Informe sua idade!</string>
    <string name="dialog_title">Redefinir dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
</resources>