<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <View
        android:background="@drawable/container_header"
        android:id="@+id/container_header"
        android:layout_height="100dp"
        android:layout_width="match_parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:src="@drawable/bebaagua"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header" />

    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="60dp"
        android:src="@drawable/ic_refresh_24"
        app:layout_constraintEnd_toEndOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header" />

    <EditText
        android:gravity="center"
        android:hint="@string/hint_peso"
        android:id="@+id/edit_peso"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:maxLength="6"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <EditText
        android:gravity="center"
        android:hint="@string/hint_idade"
        android:id="@+id/edit_idade"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:maxLength="3"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_peso"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/bg_degrade_button"
        android:id="@+id/bt_calcular"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:text="@string/text_button_calcular"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_peso" />

    <View
        android:background="@drawable/container_resultado_ml"
        android:id="@+id/container_resultado_ml"
        android:layout_height="250dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular" />

    <TextView
        android:id="@+id/txt_tesultado_ml"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text=""
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_resultado_ml" />

    <Button
        android:backgroundTint="@android:color/holo_blue_dark"
        android:id="@+id/bt_definir_lembrete"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/text_button_lembrete"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"
        app:layout_goneMarginTop="20dp" />

    <Button
        android:backgroundTint="@android:color/holo_blue_dark"
        android:id="@+id/bt_alarme"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/text_button_alarme"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"
        app:layout_goneMarginTop="20dp" />


    <TextView
        android:id="@+id/txt_hora"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/text_hora"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

    <TextView
        android:id="@+id/txt_doispontos"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/text_doispontos"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/txt_hora"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/text_minutos"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/txt_doispontos"
        app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
